First attepmt to correct screen spacing for first section

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ h1 {
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 49px;
 }
 
 p {
@@ -64,14 +64,15 @@ p {
 
 .hero-area {
     display: flex;
+    flex-direction: column;
     height: 100%;
     justify-content: space-between;
     align-items: center;
 }
 
 .hero-text {
-    margin-left: 80px;
-    margin-bottom: 200px;
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 .button {
